<resources>
    <string name="app_name">ChoreMatic</string>
    <string name="title_chore_detail">Chore Detail</string>

    <string name="title_activity_chooser">ChooserActivity</string>
    <string name="title_activity_email_password">EmailPasswordActivity</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="floor_details_instructions">Mark all the rooms on the %1$s Floor:</string>
    <string name="num_floors_label">%1$d Floors</string>
    <string name="main_floor_name">Main</string>
    <string name="upstairs_floor_name">Upstairs</string>
    <string name="downstairs_floor_name">Downstairs</string>
    <string name="setup_num_bed_bath_string">%1$s Floor: How many?</string>

    <plurals name="numberOfFloors">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d Floor</item>
        <item quantity="other">%d Floors</item>
    </plurals>

    <string name="kitchen_string">Kitchen</string>
    <string name="laundry_string">Laundry</string>
    <string name="living_room_string">Living Room</string>
    <string name="bedroom_string">Bedroom</string>
    <string name="bathroom_string">Bathroom</string>
    <string name="family_room_string">Family Room</string>
    <string name="dining_room_string">Dining Room</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="today_activity_title">Today\'s Chores</string>
    <string name="days_string">days</string>
    <string name="not_applicable_string">N/A</string>
    <string name="unscheduled_string">unscheduled</string>
    <string name="widget_success_string">No chores left!  Great Job!</string>
    <string name="widget_one_left">Just one chore left!</string>
    <string name="widget_num_chores_left">%s chores left!</string>
    <string name="in_development_toast_string">In development!  Select Sign In with Google below</string>
    <string name="today_nav_menu">Today</string>
    <string name="calendar_nav_menu">Calendar</string>
    <string name="user_group_nav_menu">User</string>
    <string name="sign_out_nav_menu">Sign Out</string>
    <string name="coming_soon_string">COMING SOON!</string>
    <string name="cd_app_logo">App Logo</string>
    <string name="cd_view_chore_details">View Chore Details</string>
    <string name="cd_one_bedroom">One Bedroom</string>
    <string name="cd_two_bedrooms">Two Bedrooms</string>
    <string name="cd_three_bedrooms">Three Bedrooms</string>
    <string name="cd_one_bathroom">one bathroom</string>
    <string name="cd_two_bathrooms">two bathrooms</string>
    <string name="cd_three_bathrooms">three bathrooms</string>
    <string name="cd_roof">roof</string>
    <string name="cd_first_floor">first floor</string>
    <string name="cd_one_floor">one floor</string>
    <string name="cd_two_floors">two floors</string>
    <string name="cd_three_floors">three floors</string>
    <string name="cd_effort_level_indicator">effort level indicator</string>
    <string name="cd_profile_image">Profile Image</string>
    <string name="cd_chorematic_logo">ChoreMatic Logo</string>
    <string name="cd_mark_chore_complete">Mark Chore Complete</string>
    <string name="cd_action_email">Email Action</string>
    <string name="cd_sign_in_with_email">Sign in with Email</string>
    <string name="cd_create_account">Create Account</string>
    <string name="cd_sign_out">Sign Out</string>
    <string name="cd_sign_in_with_google">Sign in with Google</string>
    <string name="max_floors_toast">Max of 3 floors</string>
    <string name="rcd_debug_tag">RCD</string>
    <string name="auth_state_signed_in">onAuthStateChanged:signed_in:</string>
    <string name="auth_state_signed_out">onAuthStateChanged:signed_out</string>
    <string name="user_data">user_data</string>
    <string name="prefs_user_name">prefs_user_name</string>
    <string name="chorematic_user">ChoreMatic User</string>
    <string name="chorematic_user_email">ChoreMatic User email</string>
    <string name="prefs_user_email">prefs_user_email</string>
    <string name="prefs_user_photo">prefs_user_photo</string>
    <string name="chore_marked_complete">Chore marked complete</string>
    <string name="today">Today</string>
    <string name="mm_dd_date_format">MM/DD</string>
    <string name="format_day_of_the_week">EEEE</string>
    <string name="replace_action">Replace with your own action</string>
    <string name="action">Action</string>
    <string name="required">Required.</string>
    <string name="notification_text">"ChoreMatic chores updated for "</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_30">30</string>
    <string name="_29">29</string>
    <string name="_28">28</string>
    <string name="_27">27</string>
    <string name="_26">26</string>
    <string name="_25">25</string>
    <string name="_24">24</string>
    <string name="_23">23</string>
    <string name="_22">22</string>
    <string name="_21">21</string>
    <string name="_20">20</string>
    <string name="_19">19</string>
    <string name="_18">18</string>
    <string name="_17">17</string>
    <string name="_16">16</string>
    <string name="_15">15</string>
    <string name="_14">14</string>
    <string name="_13">13</string>
    <string name="_12" >12</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="setup_back">BACK</string>
    <string name="setup_next">NEXT</string>
    <string name="auth_failed_">Authentication failed.</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="disconnect_account">Disconnect Account</string>
    <string name="example_firebase_detail">Firebase User ID: 123456789abc</string>
    <string name="th_suffix">th</string>
    <string name="st_suffix">st</string>
    <string name="nd_suffix">nd</string>
    <string name="rd_suffix">rd</string>
    <string name="th__suffix">th</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="widget_string_format">MMMM dd, yyyy</string>
    <string name="fragment_question">Fragment Question</string>
    <string name="floor_index">index</string>
    <string name="description">description</string>
    <string name="index">index</string>
    <string name="hasBedrooms">hasBedrooms</string>
    <string name="hasBathrooms">hasBathrooms</string>
    <string name="numFloors">numFloors</string>
    <string name="Bedroom">Bedroom</string>
    <string name="Bathroom">Bathroom</string>
    <string name="firebaseBucket">gs://chore-app-4c0eb.appspot.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="status">STATUS</string>
    <string name="chooser">Chooser</string>
</resources>
