<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="8dp"
    tools:context="com.sidegigapps.chorematic.activities.CalendarActivityFragment"
    tools:showIn="@layout/activity_calendar">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <!--DAYS LABELS -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/calendarDaysLabel"
                android:text="@string/sunday"/>
            <TextView
                style="@style/calendarDaysLabel"
                android:text="@string/monday"/>
            <TextView
                style="@style/calendarDaysLabel"
                android:text="@string/tuesday"/>
            <TextView
                style="@style/calendarDaysLabel"
                android:text="@string/wednesday"/>
            <TextView
                style="@style/calendarDaysLabel"
                android:text="@string/thursday"/>
            <TextView
                style="@style/calendarDaysLabel"
                android:text="@string/friday"/>
            <TextView
                style="@style/calendarDaysLabel"
                android:text="@string/saturday"/>
        </TableRow>

        <!--DAYS -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_1"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_2"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_3"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_4"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_5"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_6"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_7"/>
        </TableRow>
        <!--DAYS -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_8"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_9"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_10"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_11"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_12"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_13"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_14"/>
        </TableRow>
        <!--DAYS -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_15"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_16"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_17"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_18"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_19"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_20"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_21"/>
        </TableRow>
        <!--DAYS -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_22"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_23"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_24"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_25"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_26"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_27"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_28"/>
        </TableRow>
        <!--DAYS -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_29"/>
            <TextView
                style="@style/calendarDayView"
                android:text="@string/_30"/>
            <TextView
                style="@style/calendarDayViewAlternateMonth"
                android:text="@string/_1"/>
            <TextView
                style="@style/calendarDayViewAlternateMonth"
                android:text="@string/_2"/>
            <TextView
                style="@style/calendarDayViewAlternateMonth"
                android:text="@string/_3"/>
            <TextView
                style="@style/calendarDayViewAlternateMonth"
                android:text="@string/_4"/>
            <TextView
                style="@style/calendarDayViewAlternateMonth"
                android:text="@string/_5"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:text="@string/coming_soon_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:id="@+id/textView" />
</RelativeLayout>
